--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <img src="بيت لحم .jpg" width="200px"/>
   <p>Bethlehem, is the name of a city in the south of Jerusalem city called The House of Eli Lahama, where Lahama is the name of Harvest and Fertility God among the Canaanites  </p>
 
-  <a href="">About.html</a>
+  <a href="about.html">About.html</a>
 </body>
 </html>
